# exponent

./: pom.xml
src/C_code/exp/: CMakeLists.txt  PartlySum.cpp  PartlySum.h  main.cpp
src/main/java/: App.java  DataCollector.java  MyDataCollector.java  Plotter.java
